--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "project-web-apps",
   "version": "1.0.0",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "build": "node build.js"
+  },
+  "devDependencies": {
+    "esbuild": "^0.20.0"
   }
 }
